# shap

./: pyproject.toml  setup.py
.github/workflows/: run_tests.yml
shap/benchmark/: _sequential.py
shap/explainers/: _exact.py  _partition.py  _permutation.py  _tree.py
shap/maskers/: _image.py  _tabular.py
shap/utils/: _masked_model.py
tests/explainers/: test_deep.py  test_gradient.py  test_tree.py
tests/plots/: test_heatmap.py  test_summary.py  test_waterfall.py
